[package]
name = "duckduckgeo"
version = "0.2.3"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "2d geom library"
license = "MIT/Apache-2.0"
repository = "https://github.com/tiby312/duckduckgeo"
keywords = ["geometry"]
readme = "readme.md"
edition = "2018"


[dependencies]
axgeom = "1.2"
roots = "0.0.5"
dists="0.3"
rand="*"
bit-vec = "0.6"
more-asserts="*"
ordered-float = "1.0.2"
num-traits = "0.2.8"
