[package]
name = "duckduckgeo"
version = "0.4.1"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
description = "2d geom library"
license = "MIT/Apache-2.0"
repository = "https://github.com/tiby312/duckduckgeo"
keywords = ["geometry"]
readme = "readme.md"
edition = "2018"


[dependencies]
axgeom = "1.6"
dists="0.3"
rand = "0.7.0"
bit-vec = "0.6"
more-asserts="0.2"
